# industrial-rag-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PRD.md  README.md  ROADMAP.md  claude.md  docker-compose.yml  info.txt  openapi.json  pyproject.toml  query.json
.claude/: settings.local.json
app/: main.py
app/agents/: __init__.py  rag_graph.py  state.py
app/agents/nodes/: __init__.py  assemble.py  cite.py  generate.py  retrieve.py
app/api/: dependencies.py
app/api/v1/routers/: chat.py  collections.py  documents.py  system.py
app/core/: config.py  exceptions.py  logging.py  models.py  prompts.py
app/db/: __init__.py  document_repository.py  qdrant_client.py  qdrant_repository.py
app/rag/: __init__.py  assembler.py  chunker.py  embedder.py  extractor.py  retriever.py  sparse_embedder.py
app/services/: __init__.py  ingestion_service.py  query_service.py
docs/: phase6-redesign-plan.md
docs/architecture/: rag_graph.md
evaluation/: __init__.py  metrics.py  pipeline_client.py  run_ragas.py  threshold_sweep.py
evaluation/datasets/: industrial_qa.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatHistoryItem.tsx  ChatHistoryList.tsx  ChatInputBar.tsx  ChatWindow.tsx  CitationCard.tsx  CollectionsPanel.tsx  DocumentSidebar.tsx  DocumentsPanel.tsx  MessageBubble.tsx  ModelSettings.tsx  RetrievalSettings.tsx  SettingsPanel.tsx  Sidebar.tsx  SidebarCollectionSection.tsx  SidebarDocumentSection.tsx  SidebarFooter.tsx  StatusBadge.tsx  ThemeSettings.tsx  UploadDropzone.tsx  UploadPopover.tsx
frontend/src/contexts/: settings.tsx
frontend/src/hooks/: useChat.ts  useCollections.ts  useDocuments.ts  useTheme.ts
frontend/src/types/: index.ts
scripts/: init_collection.py  pull_models.sh  seed_demo_data.py
test_uploads/: documents.db
tests/: conftest.py
tests/integration/: test_graph.py  test_ingestion.py  test_query.py
tests/unit/: test_assembler.py  test_chat_routes.py  test_chunker.py  test_citations.py  test_config.py  test_document_repository.py  test_document_routes.py  test_embedder.py  test_exceptions.py  test_extractor.py  test_models.py  test_nodes.py  test_retriever.py  test_system_routes.py
